<resources>
    <string name="app_name">举升Demo</string>

    <string name="http_loading">加载中&#8230;</string>

    <string name="http_unknown_error">请求出错，未知错误</string>
    <string name="http_token_error">登录失效，请重新登录</string>
    <string name="http_data_explain_error">数据解析异常，请稍后</string>
    <string name="http_server_out_time">服务器请求超时，请稍后再试</string>
    <string name="http_network_error">请求失败，请检查网络设置</string>
    <string name="http_response_error">服务器响应异常，请稍后再试，响应码：%d，响应信息：%s</string>
    <string name="http_server_error">服务器连接异常，请稍后再试</string>
    <string name="http_request_cancel">请求被中断，请重试</string>
    <string name="http_response_null_body">服务器数据返回异常，请稍后再试</string>
    <string name="http_response_md5_error">下载失败，文件 md5 校验失败</string>

    <string name="call">呼叫盒</string>
    <string name="call_serial">呼叫盒编号</string>
    <string name="online">上线</string>
    <string name="offline">下线</string>
    <string name="finish">结束</string>
    <string name="call_have">呼叫（有料）</string>
    <string name="call_no_have">呼叫（无料）</string>
    <string name="selected_no_first">请先选中或填写呼叫盒编号</string>
    <string name="selected_no">呼叫盒：%1$s</string>
    <string name="online_no">%1$s 上线</string>
    <string name="offline_no">%1$s 下线</string>
    <string name="call_no">%1$s 呼叫</string>
    <string name="cancel_task">%1$s 取消</string>
</resources>