<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/select_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/select_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/call"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/no"
        app:layout_constraintTop_toBottomOf="@id/list" />


    <EditText
        android:id="@+id/no"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border"
        android:hint="@string/call_serial"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/online_btn" />

    <Button
        android:id="@+id/online_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/online"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/offline_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/offline_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/offline"
        app:layout_constraintBottom_toBottomOf="@id/online_btn"
        app:layout_constraintEnd_toStartOf="@id/end_btn"
        app:layout_constraintStart_toEndOf="@id/online_btn" />

    <Button
        android:id="@+id/end_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="@id/online_btn"
        app:layout_constraintEnd_toStartOf="@id/call_have_btn"
        app:layout_constraintStart_toEndOf="@id/offline_btn" />


    <Button
        android:id="@+id/call_have_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_have"
        app:layout_constraintBottom_toBottomOf="@id/online_btn"
        app:layout_constraintEnd_toStartOf="@id/call_no_btn"
        app:layout_constraintStart_toEndOf="@id/end_btn" />

    <Button
        android:id="@+id/call_no_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_no_have"
        app:layout_constraintBottom_toBottomOf="@id/online_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/call_have_btn" />


    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="online_btn,offline_btn,end_btn,call_have_btn,call_no_btn"
        app:flow_wrapMode="aligned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>